Updates the readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -38,13 +38,13 @@ devtools::install_github("carpenitoThomas/MISL")
 
 Here's an example with the nhanes data in which we use MISL imputation and then pool the results:
 
-```{r example, eval = FALSE}
+```{r example, cache = TRUE}
 library(misl)
 
-misl_imp <- misl(nhanes, maxit = 2, m = 2)
+misl_imp <- misl(nhanes, maxit = 2, m = 2, quiet = TRUE)
 
 misl_modeling <- lapply(misl_imp, function(y){
-  stats::lm(bmi ~ hyp + chl, data = y)
+  stats::lm(TotChol ~ Age + Weight + Height + Smoke100 + Education, data = y)
 })
 
 summary(mice::pool(misl_modeling))
