--- a/README.Rmd
+++ b/README.Rmd
@@ -42,12 +42,15 @@ Here's an example with the nhanes data in which we use `misl()` imputation and t
 
 ```{r}
 library(misl)
+library(mice)
 
 plan(list(tweak(multisession, workers = 4), sequential))
-misl_imp <- misl(nhanes, maxit = 5, m = 4, quiet = FALSE,
+misl_imp <- misl(misl::nhanes, maxit = 5, m = 4, quiet = FALSE,
                   con_method = c("Lrnr_mean", "Lrnr_glm_fast", "Lrnr_earth", "Lrnr_glmnet", "Lrnr_polspline"),
                   bin_method = c("Lrnr_mean", "Lrnr_earth", "Lrnr_glm_fast"),
                   cat_method = c("Lrnr_independent_binomial", "Lrnr_mean"))
+
+mice_imp <- mice(misl::nhanes)
 
 misl_modeling <- lapply(misl_imp, function(y){
   stats::lm(TotChol ~ Age + Weight + Height + Smoke100 + Education, data = y$datasets)
